# Aby

./: .travis.yml  CMakeLists.txt  README.md  makefile  testFluxWebcam.cpp
include/: error.hpp  window.hpp
src/: error.cpp  main.cpp  window.cpp
